deployment/gke/ingress-emi.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-web-main
  namespace: default
  annotations:
    # Use a static ip
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/issuer: "letsencrypt"
    certmanager.k8s.io/acme-challenge-type: http01
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
spec:  
  rules:
  - host: fleet.nebulae.com.co
    http:
      paths:  
      - path: /
        backend:
          serviceName: frontend-emi
          servicePort: 80     
      - path: /emi
        backend:
          serviceName: frontend-emi
          servicePort: 80          
  tls:
      - hosts:
        - fleet.nebulae.com.co
        secretName: tls-keycloak
